[*] use template method for service answer preparation

--- a/src/plugins/tinkoffInvest/CMakeLists.txt
+++ b/src/plugins/tinkoffInvest/CMakeLists.txt
@@ -27,7 +27,8 @@ target_link_libraries(${PROJECT_NAME}
     TinkoffInvestSDK
     )
 
-#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/TinkoffInvestSDK)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/TinkoffInvestSDK)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/TinkoffInvestSDK/services)
 
 set_plugin_dir(${PROJECT_NAME})
 
