--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -19,3 +19,4 @@ endfunction()
 add_subdirectory(telegramBot)
 add_subdirectory(tinkoffInvest)
 add_subdirectory(dataBase)
+add_subdirectory(robots)
