Special path for robots

--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -4,7 +4,19 @@ project(plugins)
 
 set(CMAKE_AUTOMOC ON)
 
-function(set_plugin_dir target)
+function(set_robots_dir target)
+    set(ROBOTS_DIR "robots")
+    set_target_properties(${target} PROPERTIES
+        LIBRARY_OUTPUT_DIRECTORY "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/${ROBOTS_DIR}"
+        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${ROBOTS_DIR}"
+        LIBRARY_OUTPUT_DIRECTORY_DEBUG "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/${ROBOTS_DIR}"
+        RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG}/${ROBOTS_DIR}"
+        LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/${ROBOTS_DIR}"
+        RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE}/${ROBOTS_DIR}"
+    )
+endfunction()
+
+function(set_plugins_dir target)
     set(PLUGIN_DIR "plugins")
     set_target_properties(${target} PROPERTIES
         LIBRARY_OUTPUT_DIRECTORY "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/${PLUGIN_DIR}"
