--- a/src/plugins/robots/MovingAverage/CMakeLists.txt
+++ b/src/plugins/robots/MovingAverage/CMakeLists.txt
@@ -30,6 +30,6 @@ target_link_libraries(${PROJECT_NAME}
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../TinkoffInvestSDK)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../TinkoffInvestSDK/services)
 
-set_plugin_dir(${PROJECT_NAME})
+set_robots_dir(${PROJECT_NAME})
 
 
