--- a/src/plugins/dataBase/CMakeLists.txt
+++ b/src/plugins/dataBase/CMakeLists.txt
@@ -25,5 +25,4 @@ target_link_libraries(${PROJECT_NAME}
     hevaa::core
     )
 
-set_plugin_dir(${PROJECT_NAME})
-
+set_plugins_dir(${PROJECT_NAME})
