--- a/src/plugins/tinkoffInvest/CMakeLists.txt
+++ b/src/plugins/tinkoffInvest/CMakeLists.txt
@@ -30,5 +30,5 @@ target_link_libraries(${PROJECT_NAME}
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/TinkoffInvestSDK)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/TinkoffInvestSDK/services)
 
-set_plugin_dir(${PROJECT_NAME})
+set_plugins_dir(${PROJECT_NAME})
 
